--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=formation
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 # OpenAPI/Swagger Configuration
 springdoc.api-docs.path=/api-docs
