--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,10 +1,11 @@
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-logging.level.com.formation=DEBUG 
+# Disable OpenAPI/Swagger for tests
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
