--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,10 @@
             <scope>runtime</scope>
         </dependency>
         
-        <dependency>
+            <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.5.1</version>
             <scope>runtime</scope>
         </dependency>
         
@@ -69,9 +70,9 @@
         
         <!-- Swagger for API Documentation -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-            <version>3.0.0</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.7.0</version>
         </dependency>
         
         <!-- Lombok for reducing boilerplate code -->
@@ -99,13 +100,7 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
-        
-        <!-- SpringDoc OpenAPI UI -->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.3.0</version>
-        </dependency>
+    
         
         <!-- H2 Database for Testing -->
         <dependency>
